// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout header renders correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class=""
        style="min-width: 0; flex-basis: 0px;"
      >
        <nav
          class="oWtJtA uui-main_menu uui-mainmenu-container yvgPcw"
        >
          <div
            class="wxJmc8 _7zh34y"
          >
            <div
              class="uui-flex-row _5Jq2IB RkwqFu"
            >
              <div
                data-testid="header-logo-image"
              >
                <a
                  aria-disabled="true"
                  class="uui-button-box uui-disabled -clickable uui-anchor WiTwhP z3KHzf"
                  tabindex="-1"
                >
                  <img
                    alt="Main Menu Logo"
                    class="PCaaX2"
                    src="/artograd.logo.svg"
                  />
                </a>
              </div>
              <button
                class="uui-button-box uui-enabled -clickable YhOZc4 w-FQr6 menuPageLink"
                role="menuitem"
                tabindex="0"
                type="button"
              >
                <div
                  class="uui-caption"
                >
                  Home
                </div>
              </button>
              <button
                class="uui-button-box uui-enabled -clickable YhOZc4 w-FQr6 menuPageLink"
                role="menuitem"
                tabindex="0"
                type="button"
              >
                <div
                  class="uui-caption"
                >
                  Tenders
                </div>
              </button>
              <button
                class="uui-button-box uui-enabled -clickable YhOZc4 w-FQr6 menuPageLink"
                role="menuitem"
                tabindex="0"
                type="button"
              >
                <div
                  class="uui-caption"
                >
                  Art Objects
                </div>
              </button>
              <div
                class="CcZAjD"
              />
              <div
                class="uui-flex-row kfXZUl _7f-LqE aqsq6e kxaOed BRv7OH _5Jq2IB RkwqFu"
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="true"
                  class="uui-button-box uui-enabled -clickable YhOZc4 w-FQr6 languageSelector"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  <div
                    class="uui-caption"
                  >
                    en
                  </div>
                  <div
                    class="Prmk3w uui-icon uui-enabled"
                  >
                    <svg
                      class=""
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                </button>
              </div>
              <div
                class="uui-flex-row kfXZUl _7f-LqE aqsq6e kxaOed BRv7OH _5Jq2IB RkwqFu"
              >
                <a
                  class="uui-button-box uui-enabled -clickable uui-anchor VFUd6V y6sOzI uui-button uui-fill-none uui-color-primary uui-size-36 signInButton"
                  href="https://artograd-dev2.auth.eu-central-1.amazoncognito.com/login?client_id=5c2gu1dvnte5qcvb60rb87llm8&response_type=code&scope=email+openid+phone+profile&redirect_uri=http%3A%2F%2Flocalhost%2Fcallback"
                  tabindex="0"
                >
                  <div
                    class="uui-caption"
                  >
                    Sign In
                  </div>
                </a>
              </div>
              <div
                class="uui-flex-row kfXZUl _7f-LqE aqsq6e kxaOed BRv7OH _5Jq2IB RkwqFu"
              >
                <a
                  class="uui-button-box uui-enabled -clickable uui-anchor VFUd6V y6sOzI uui-button uui-fill-solid uui-color-primary uui-size-36 signUpButton"
                  href="https://artograd-dev2.auth.eu-central-1.amazoncognito.com/signup?client_id=5c2gu1dvnte5qcvb60rb87llm8&response_type=code&scope=email+openid+phone+profile&redirect_uri=http%3A%2F%2Flocalhost%2Fcallback"
                  tabindex="0"
                >
                  <div
                    class="uui-caption"
                  >
                    Sign Up
                  </div>
                </a>
              </div>
            </div>
          </div>
        </nav>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class=""
      style="min-width: 0; flex-basis: 0px;"
    >
      <nav
        class="oWtJtA uui-main_menu uui-mainmenu-container yvgPcw"
      >
        <div
          class="wxJmc8 _7zh34y"
        >
          <div
            class="uui-flex-row _5Jq2IB RkwqFu"
          >
            <div
              data-testid="header-logo-image"
            >
              <a
                aria-disabled="true"
                class="uui-button-box uui-disabled -clickable uui-anchor WiTwhP z3KHzf"
                tabindex="-1"
              >
                <img
                  alt="Main Menu Logo"
                  class="PCaaX2"
                  src="/artograd.logo.svg"
                />
              </a>
            </div>
            <button
              class="uui-button-box uui-enabled -clickable YhOZc4 w-FQr6 menuPageLink"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              <div
                class="uui-caption"
              >
                Home
              </div>
            </button>
            <button
              class="uui-button-box uui-enabled -clickable YhOZc4 w-FQr6 menuPageLink"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              <div
                class="uui-caption"
              >
                Tenders
              </div>
            </button>
            <button
              class="uui-button-box uui-enabled -clickable YhOZc4 w-FQr6 menuPageLink"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              <div
                class="uui-caption"
              >
                Art Objects
              </div>
            </button>
            <div
              class="CcZAjD"
            />
            <div
              class="uui-flex-row kfXZUl _7f-LqE aqsq6e kxaOed BRv7OH _5Jq2IB RkwqFu"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="uui-button-box uui-enabled -clickable YhOZc4 w-FQr6 languageSelector"
                role="menuitem"
                tabindex="0"
                type="button"
              >
                <div
                  class="uui-caption"
                >
                  en
                </div>
                <div
                  class="Prmk3w uui-icon uui-enabled"
                >
                  <svg
                    class=""
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </button>
            </div>
            <div
              class="uui-flex-row kfXZUl _7f-LqE aqsq6e kxaOed BRv7OH _5Jq2IB RkwqFu"
            >
              <a
                class="uui-button-box uui-enabled -clickable uui-anchor VFUd6V y6sOzI uui-button uui-fill-none uui-color-primary uui-size-36 signInButton"
                href="https://artograd-dev2.auth.eu-central-1.amazoncognito.com/login?client_id=5c2gu1dvnte5qcvb60rb87llm8&response_type=code&scope=email+openid+phone+profile&redirect_uri=http%3A%2F%2Flocalhost%2Fcallback"
                tabindex="0"
              >
                <div
                  class="uui-caption"
                >
                  Sign In
                </div>
              </a>
            </div>
            <div
              class="uui-flex-row kfXZUl _7f-LqE aqsq6e kxaOed BRv7OH _5Jq2IB RkwqFu"
            >
              <a
                class="uui-button-box uui-enabled -clickable uui-anchor VFUd6V y6sOzI uui-button uui-fill-solid uui-color-primary uui-size-36 signUpButton"
                href="https://artograd-dev2.auth.eu-central-1.amazoncognito.com/signup?client_id=5c2gu1dvnte5qcvb60rb87llm8&response_type=code&scope=email+openid+phone+profile&redirect_uri=http%3A%2F%2Flocalhost%2Fcallback"
                tabindex="0"
              >
                <div
                  class="uui-caption"
                >
                  Sign Up
                </div>
              </a>
            </div>
          </div>
        </div>
      </nav>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByAria": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByRoleAndText": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByAria": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByRoleAndText": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByAria": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByRoleAndText": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByAria": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByRoleAndText": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByAria": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByRoleAndText": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByAria": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByRoleAndText": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Layout mobile header renders correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class=""
        style="min-width: 0; flex-basis: 0px;"
      >
        <nav
          class="oWtJtA uui-main_menu uui-mainmenu-container yvgPcw"
        >
          <div
            class="wxJmc8 _7zh34y"
          >
            <div
              class="uui-flex-row _5Jq2IB RkwqFu"
            >
              <div
                class="Ou5Q6- uui-burger uui-burger-menu kF-Yta"
                data-testid="header-burger-menu"
              >
                <button
                  class="uui-burger-button"
                >
                  <div
                    class="Prmk3w uui-icon uui-enabled"
                  >
                    <svg
                      class=""
                      height="60"
                      viewBox="0 0 24 24"
                      width="60"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M8 9.2h8v.8H8zM8 14h6v.8H8zm0-2.4h8v.8H8z"
                      />
                    </svg>
                  </div>
                </button>
              </div>
              <div
                data-testid="header-logo-image"
              >
                <a
                  aria-disabled="true"
                  class="uui-button-box uui-disabled -clickable uui-anchor WiTwhP z3KHzf"
                  tabindex="-1"
                >
                  <img
                    alt="Main Menu Logo"
                    class="PCaaX2"
                    src="/artograd.logo.svg"
                  />
                </a>
              </div>
              <button
                class="uui-button-box uui-enabled -clickable YhOZc4 w-FQr6 menuPageLink"
                role="menuitem"
                tabindex="0"
                type="button"
              >
                <div
                  class="uui-caption"
                >
                  Home
                </div>
              </button>
              <button
                class="uui-button-box uui-enabled -clickable YhOZc4 w-FQr6 menuPageLink"
                role="menuitem"
                tabindex="0"
                type="button"
              >
                <div
                  class="uui-caption"
                >
                  Tenders
                </div>
              </button>
              <button
                class="uui-button-box uui-enabled -clickable YhOZc4 w-FQr6 menuPageLink"
                role="menuitem"
                tabindex="0"
                type="button"
              >
                <div
                  class="uui-caption"
                >
                  Art Objects
                </div>
              </button>
              <div
                class="CcZAjD"
              />
              <div
                class="uui-flex-row kfXZUl _7f-LqE aqsq6e kxaOed BRv7OH _5Jq2IB RkwqFu"
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="true"
                  class="uui-button-box uui-enabled -clickable YhOZc4 w-FQr6 languageSelector"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  <div
                    class="uui-caption"
                  >
                    en
                  </div>
                  <div
                    class="Prmk3w uui-icon uui-enabled"
                  >
                    <svg
                      class=""
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                </button>
              </div>
              <div
                class="uui-flex-row kfXZUl _7f-LqE aqsq6e kxaOed BRv7OH _5Jq2IB RkwqFu"
              >
                <a
                  class="uui-button-box uui-enabled -clickable uui-anchor VFUd6V y6sOzI uui-button uui-fill-none uui-color-primary uui-size-36 signInButton"
                  href="https://artograd-dev2.auth.eu-central-1.amazoncognito.com/login?client_id=5c2gu1dvnte5qcvb60rb87llm8&response_type=code&scope=email+openid+phone+profile&redirect_uri=http%3A%2F%2Flocalhost%2Fcallback"
                  tabindex="0"
                >
                  <div
                    class="uui-caption"
                  >
                    Sign In
                  </div>
                </a>
              </div>
              <div
                class="uui-flex-row kfXZUl _7f-LqE aqsq6e kxaOed BRv7OH _5Jq2IB RkwqFu"
              >
                <a
                  class="uui-button-box uui-enabled -clickable uui-anchor VFUd6V y6sOzI uui-button uui-fill-solid uui-color-primary uui-size-36 signUpButton"
                  href="https://artograd-dev2.auth.eu-central-1.amazoncognito.com/signup?client_id=5c2gu1dvnte5qcvb60rb87llm8&response_type=code&scope=email+openid+phone+profile&redirect_uri=http%3A%2F%2Flocalhost%2Fcallback"
                  tabindex="0"
                >
                  <div
                    class="uui-caption"
                  >
                    Sign Up
                  </div>
                </a>
              </div>
            </div>
          </div>
        </nav>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class=""
      style="min-width: 0; flex-basis: 0px;"
    >
      <nav
        class="oWtJtA uui-main_menu uui-mainmenu-container yvgPcw"
      >
        <div
          class="wxJmc8 _7zh34y"
        >
          <div
            class="uui-flex-row _5Jq2IB RkwqFu"
          >
            <div
              class="Ou5Q6- uui-burger uui-burger-menu kF-Yta"
              data-testid="header-burger-menu"
            >
              <button
                class="uui-burger-button"
              >
                <div
                  class="Prmk3w uui-icon uui-enabled"
                >
                  <svg
                    class=""
                    height="60"
                    viewBox="0 0 24 24"
                    width="60"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8 9.2h8v.8H8zM8 14h6v.8H8zm0-2.4h8v.8H8z"
                    />
                  </svg>
                </div>
              </button>
            </div>
            <div
              data-testid="header-logo-image"
            >
              <a
                aria-disabled="true"
                class="uui-button-box uui-disabled -clickable uui-anchor WiTwhP z3KHzf"
                tabindex="-1"
              >
                <img
                  alt="Main Menu Logo"
                  class="PCaaX2"
                  src="/artograd.logo.svg"
                />
              </a>
            </div>
            <button
              class="uui-button-box uui-enabled -clickable YhOZc4 w-FQr6 menuPageLink"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              <div
                class="uui-caption"
              >
                Home
              </div>
            </button>
            <button
              class="uui-button-box uui-enabled -clickable YhOZc4 w-FQr6 menuPageLink"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              <div
                class="uui-caption"
              >
                Tenders
              </div>
            </button>
            <button
              class="uui-button-box uui-enabled -clickable YhOZc4 w-FQr6 menuPageLink"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              <div
                class="uui-caption"
              >
                Art Objects
              </div>
            </button>
            <div
              class="CcZAjD"
            />
            <div
              class="uui-flex-row kfXZUl _7f-LqE aqsq6e kxaOed BRv7OH _5Jq2IB RkwqFu"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="uui-button-box uui-enabled -clickable YhOZc4 w-FQr6 languageSelector"
                role="menuitem"
                tabindex="0"
                type="button"
              >
                <div
                  class="uui-caption"
                >
                  en
                </div>
                <div
                  class="Prmk3w uui-icon uui-enabled"
                >
                  <svg
                    class=""
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </button>
            </div>
            <div
              class="uui-flex-row kfXZUl _7f-LqE aqsq6e kxaOed BRv7OH _5Jq2IB RkwqFu"
            >
              <a
                class="uui-button-box uui-enabled -clickable uui-anchor VFUd6V y6sOzI uui-button uui-fill-none uui-color-primary uui-size-36 signInButton"
                href="https://artograd-dev2.auth.eu-central-1.amazoncognito.com/login?client_id=5c2gu1dvnte5qcvb60rb87llm8&response_type=code&scope=email+openid+phone+profile&redirect_uri=http%3A%2F%2Flocalhost%2Fcallback"
                tabindex="0"
              >
                <div
                  class="uui-caption"
                >
                  Sign In
                </div>
              </a>
            </div>
            <div
              class="uui-flex-row kfXZUl _7f-LqE aqsq6e kxaOed BRv7OH _5Jq2IB RkwqFu"
            >
              <a
                class="uui-button-box uui-enabled -clickable uui-anchor VFUd6V y6sOzI uui-button uui-fill-solid uui-color-primary uui-size-36 signUpButton"
                href="https://artograd-dev2.auth.eu-central-1.amazoncognito.com/signup?client_id=5c2gu1dvnte5qcvb60rb87llm8&response_type=code&scope=email+openid+phone+profile&redirect_uri=http%3A%2F%2Flocalhost%2Fcallback"
                tabindex="0"
              >
                <div
                  class="uui-caption"
                >
                  Sign Up
                </div>
              </a>
            </div>
          </div>
        </div>
      </nav>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByAria": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByRoleAndText": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByAria": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByRoleAndText": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByAria": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByRoleAndText": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByAria": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByRoleAndText": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByAria": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByRoleAndText": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByAria": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByRoleAndText": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
